--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
@@ -66,6 +66,7 @@
       .Visible(false)
       .DragEnabled(true)
       .CloseOnOutsideClick(true)
+      .FullScreen(true)
       .ContentTemplate(@<text>
             @MeasurementScrollView()
         </text>)
