--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/Index.cshtml
@@ -12,6 +12,11 @@
         result.setDate(result.getDate() + days);
         return result;
     }
+
+    function _init(s, e) {
+        s.SetSelectedIndex(0);
+    }
+
 </script>
 
 @{
