--- a/KetoSavageWeb/KetoSavageWeb/Views/Home/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Home/Index.cshtml
@@ -14,9 +14,10 @@
         }
         else
         {
-            Html.RenderPartial("_userLoginForm");
+            Html.RenderPartial("_dxLoginForm");
         }
     });
 }).GetHtml()
+
 
 
