--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_dxMeasurementForm.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_dxMeasurementForm.cshtml
@@ -33,6 +33,7 @@
                                           .DateBox()
                                           .OnValueChanged("refreshForm")
                                           .ID("measurementDate")
+                                          .Width("100%")
                                       );
                                   groupItems.AddSimpleFor(m => m.MeasurementNotes);
                                   groupItems.AddSimpleFor(m => m.MeasurementDetails)
