--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_dxMeasurementForm.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_dxMeasurementForm.cshtml
@@ -3,8 +3,6 @@
 @using ButtonType = DevExtreme.AspNet.Mvc.ButtonType
 @model KetoSavageWeb.ViewModels.MeasurementViewModel
 
-<div id="form-container">
-
 
     @{ Html.BeginForm("DxUpdateMeasurements", "UserProgress", FormMethod.Post, new { id = "editMeasurements" });}
     @*@(Html.DevExtreme().DateBox()
@@ -72,7 +70,7 @@
                                                 @(Html.DevExtreme().Button()
                                                               .ID("btnAddMeasurements")
                                                               .Text("Save")
-                                                              .Type(ButtonType.Success)
+                                                              .Type(ButtonType.Normal)
                                                               .UseSubmitBehavior(false)
                                                               .OnClick("clickHandler")
                                                               .ValidationGroup("measurements"))
@@ -82,5 +80,3 @@
                                     .FormData(Model))
     </div>
     @{ Html.EndForm();}
-
-</div>
