--- a/KetoSavageWeb/KetoSavageWeb/Content/Site.css
+++ b/KetoSavageWeb/KetoSavageWeb/Content/Site.css
@@ -117,24 +117,6 @@ html, body {
     border: 1px solid #4d4d4d;
 }
 
-@media (max-width: 1200px) {
-    #loginForm, #form-container {
-        width: 50%;
-        padding: 10px;
-    }
-
-}
-
-@media (max-width: 600px) {
-    #loginForm, #form-container {
-        width: 100%;
-    }
-    .dx-button-normal, .dx-button-success {
-        width: 100%
-    }
-}
-
-
 .center img
 {
 	margin-left: auto;
@@ -926,6 +908,23 @@ html, body {
 /**
   MEDIA QUERIES
 */
+/*MJ specific*/
+@media (max-width: 1200px) {
+    #loginForm, #form-container {
+        width: 50%;
+        padding: 10px;
+    }
+}
+
+@media (max-width: 600px) {
+    #loginForm, #form-container {
+        width: 90%;
+    }
+
+    .dx-button-normal, .dx-button-success {
+        width: 100%
+    }
+}
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
