Fixed some issues with the hunger level drop-down.  Beginning the DB changes to make Hunger Level program specific.

--- a/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientCurrentWeekBarGauge.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientCurrentWeekBarGauge.cshtml
@@ -18,7 +18,7 @@
         )
     )
 
-    <div id="panel">
+    <div id="currentWeekGaugePanel">
         @foreach (var macro in Model)
         {
             @(Html.DevExtreme().CheckBox()
