--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_enterDailyMacros.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_enterDailyMacros.cshtml
@@ -9,30 +9,29 @@
 
 
         @(Html.DevExtreme().Form<EnterMacroViewModel>()
-                          .ID("dailyMacros")
-                          .LabelLocation(FormLabelLocation.Top)
-                          .Items(items =>
-                          {
-                              items.AddSimpleFor(m => m.macroDate)
-                                  .Editor(e => e
-                                      .DateBox()
-                                      .ID("macroDate")
-                                      .OnValueChanged("refreshMacroForm")
-                                            .Width("100%"));
-                                    items.AddSimpleFor(m => m.actualFat);
-                                    items.AddSimpleFor(m => m.actualProtein);
-                                    items.AddSimpleFor(m => m.actualCarb);
-                                    items.AddSimpleFor(m => m.hungerLevel)
-                                        .Editor(e => e
-                                            .SelectBox()
-                                            .DataSource(EnumHelper.GetSelectList(typeof(HungerLevelEnum))
-                                                .Select(i => new { Value = i.Text, Text = i.Text }))
-                                            .DisplayExpr("Text")
-                                            .ValueExpr("Value"));
-                                    items.AddSimpleFor(m => m.Notes)
-                                        .Editor(e => e.TextArea());
-                                    items.AddSimple()
-                                        .Template(@<text>
+                .ID("dailyMacros")
+                .LabelLocation(FormLabelLocation.Top)
+                .Items(items =>
+                {
+                items.AddSimpleFor(m => m.macroDate)
+                              .Editor(e => e
+                                  .DateBox()
+                                  .ID("macroDate")
+                                  .OnValueChanged("refreshMacroForm")
+                                        .Width("100%"));
+                items.AddSimpleFor(m => m.actualFat);
+                items.AddSimpleFor(m => m.actualProtein);
+                items.AddSimpleFor(m => m.actualCarb);
+                items.AddSimpleFor(m => m.hungerLevelId)
+                              .Editor(e => e
+                                  .SelectBox()
+                                  .DataSource(d => d.WebApi().Controller("ProgramApi").LoadAction("getHungerLevelsByUser").LoadParams(new { userId = Model.macroUserId }).Key("Id"))
+                                  .DisplayExpr("Text")
+                                  .ValueExpr("Id"));
+                items.AddSimpleFor(m => m.Notes)
+                              .Editor(e => e.TextArea());
+                items.AddSimple()
+                              .Template(@<text>
                                             @( Html.DevExtreme().Button()
                                                 .ID("btnMacros")
                                                 .Text("Save")
